# django-eagle

./: .gitignore  .gitlint  .pre-commit-config.yaml  ARCHITECTURE.md  AUTHORS.md  CONTRIBUTING.md  LICENSE  MANIFEST.in  NOTICE  README.md  RELEASE.md  coverage.xml  pyproject.toml  ruff.toml
.github/workflows/: build.yml  ci.yml
eagle/: __init__.py  apps.py  config.py  decorators.py  exceptions.py  logger.py  middleware.py  panels.py  sinks.py
eagle/instrumentation/: __init__.py  descriptors.py  models.py  query.py  registry.py  scope.py
eagle/templates/eagle/panels/: unused_loads.html
eagle/unused/: __init__.py  ignore.py  location.py  marker.py  report.py  state.py  tracker.py
test_project/: settings.py  urls.py  views.py
tests/: base.py  conftest.py  factories.py  test_apps_ready.py  test_concurrency_isolation.py  test_cross_app_collision.py  test_descriptors_internals.py  test_enabled.py  test_instrumentation_models.py  test_instrumentation_registry.py  test_logger.py  test_mark_considered.py  test_may_access.py  test_panel.py  test_query_internals.py  test_scope.py  test_scope_ignore.py  test_scope_internals.py  test_sinks_normalize_model.py  test_unused.py  test_unused_location.py  test_unused_marker_guards.py  test_unused_report.py  test_unused_tracker.py  test_warn_unused.py
tests/collision_app/: models.py
tests/excluded_app/: models.py
tests/test_project/: models.py  serializers.py  settings.py  views.py
