[build-system]
requires = ["setuptools>=77"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["eagle*"]

# Ship non-Python files (the Debug Toolbar panel template) inside the wheel/sdist;
# packages.find only collects Python modules, so data files must be listed explicitly.
[tool.setuptools.package-data]
eagle = ["templates/**/*.html"]

[project]
name = "django-eagle"
version = "0.1.0"
description = "Prevent Django ORM Unused Eager Loads"
readme = "README.md"
license = "MIT"
license-files = ["LICENSE"]
requires-python = ">=3.10"
dependencies = [
    "django>=5.2",
]

[project.optional-dependencies]
# The Debug Toolbar panel is opt-in; DDT never becomes a core dependency.
debug-toolbar = ["django-debug-toolbar>=4.0"]

[dependency-groups]
dev = [
    "django-debug-toolbar>=4.0",
    "djangorestframework>=3.16.0",
    "factory-boy>=3.3.0",
    "pyrefly>=1.0.0",
    "pytest>=9.0.3",
    "pytest-cov>=5.0.0",
    "pytest-django>=4.9.0",
]

[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "test_project.settings"
python_files = ["test_*.py"]
# "." resolves the `tests` suite package; "tests" resolves the test apps
# (test_project, excluded_app) that live inside it as top-level imports.
pythonpath = [".", "tests"]
# Treat an unused eager load as a hard failure by default:
# any UnusedRelatedAccess that escapes an explicit capture block fails the test.
filterwarnings = [
    "error::eagle.exceptions.UnusedRelatedAccess",
]

[tool.coverage.run]
branch = true
source = ["eagle"]

[tool.coverage.report]
show_missing = true
skip_covered = true

[tool.pyrefly]
project-includes = ["eagle"]
python-version = "3.10"

# eagle composes mixins onto Django's ORM descriptor classes at runtime and
# reads/writes attributes Django adds dynamically. A static checker cannot model
# that, so the categories driven by it are disabled; everything else is checked.
[tool.pyrefly.errors]
missing-attribute = false
bad-assignment = false
bad-argument-type = false
invalid-type-alias = false
bad-return = false
no-access = false
not-iterable = false

[tool.flake8]
select = ['MLL']

[tool.pydoclint]
style = 'google'
arg-type-hints-in-docstring = false
check-arg-order = false
should-document-star-arguments = false
skip-checking-raises = true
check-return-types = false
check-yield-types = false
check-style-mismatch = true
