[build-system]
requires = ["uv_build>=0.11,<0.12"]
build-backend = "uv_build"

[tool.uv.build-backend]
# eagle/ lives at the repo root (flat layout), not under src/.
module-name = "eagle"
module-root = ""

[project]
name = "django-eagle"
version = "0.1.0"
description = "Prevent Django ORM Unused Eager Loads"
readme = "README.md"
license = "MIT"
license-files = ["LICENSE"]
requires-python = ">=3.10"
authors = [
    { name = "Xelix" },
    { name = "Cameron Hobbs", email = "cameron.hobbs@xelix.com" },
]
keywords = [
    "django",
    "orm",
    "performance",
    "select_related",
    "prefetch_related",
    "n+1",
    "eager-loading",
    "query-optimization",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Web Environment",
    "Framework :: Django",
    "Framework :: Django :: 5.2",
    "Intended Audience :: Developers",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Software Development :: Quality Assurance",
]
dependencies = [
    "django>=5.2",
]

[project.urls]
Homepage = "https://github.com/xelixdev/django-eagle"
Repository = "https://github.com/xelixdev/django-eagle"
Issues = "https://github.com/xelixdev/django-eagle/issues"

[dependency-groups]
dev = [
    "djangorestframework>=3.16.0",
    "factory-boy>=3.3.0",
    "genbadge[coverage]>=1.1.3",
    "pyrefly>=1.0.0",
    "pytest>=9.0.3",
    "pytest-cov>=5.0.0",
    "pytest-django>=4.9.0",
]

[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "test_project.settings"
python_files = ["test_*.py"]
# "." resolves the `tests` suite package; "tests" resolves the test apps
# (test_project, excluded_app) that live inside it as top-level imports.
pythonpath = [".", "tests"]
# Treat an unused eager load as a hard failure by default:
# any UnusedRelatedAccess that escapes an explicit capture block fails the test.
filterwarnings = [
    "error::eagle.exceptions.UnusedRelatedAccess",
]

[tool.coverage.run]
branch = true
source = ["eagle"]

[tool.coverage.report]
show_missing = true
skip_covered = true

[tool.pyrefly]
project-includes = ["eagle"]
python-version = "3.10"

# eagle composes mixins onto Django's ORM descriptor classes at runtime and
# reads/writes attributes Django adds dynamically. A static checker cannot model
# that, so the categories driven by it are disabled; everything else is checked.
[tool.pyrefly.errors]
missing-attribute = false
bad-assignment = false
bad-argument-type = false
invalid-type-alias = false
bad-return = false
no-access = false
not-iterable = false

[tool.flake8]
select = ['MLL']

[tool.pydoclint]
style = 'google'
arg-type-hints-in-docstring = false
check-arg-order = false
should-document-star-arguments = false
skip-checking-raises = true
check-return-types = false
check-yield-types = false
check-style-mismatch = true
